--- a/milesone_1/index.html
+++ b/milesone_1/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Icon</title>
@@ -15,6 +19,13 @@
                 <h1>FontIcons</h1>
             </div>
             <div class="type">
+                <p>FILTRA PER TIPO</p>
+                <select name="paese">
+                    <option value="I">all</option>
+                    <option value="E">animal</option>
+                    <option value="A">vegetables</option>
+                    <option value="O">user</option>
+                    </select><br>
 
             </div>
         </header>
