--- a/milestone_2/index.html
+++ b/milestone_2/index.html
@@ -20,11 +20,11 @@
             </div>
             <div class="type">
                 <p>FILTRA PER TIPO</p>
-                <select name="paese">
-                    <option value="I">all</option>
-                    <option value="E">animal</option>
-                    <option value="A">vegetables</option>
-                    <option value="O">user</option>
+                <select name="categoria">
+                    <option value="all">all</option>
+                    <option value="animal">animal</option>
+                    <option value="vegetables">vegetables</option>
+                    <option value="user">user</option>
                     </select><br>
 
             </div>
