--- a/milestone_3/index.html
+++ b/milestone_3/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="type">
                 <p>FILTRA PER TIPO</p>
-                <select name="categoria">
+                <select class="select" name="categoria">
                     <option value="all">all</option>
                     <option value="animal">animal</option>
-                    <option value="vegetables">vegetables</option>
+                    <option value="vegetable">vegetable</option>
                     <option value="user">user</option>
                     </select><br>
 
